frontend: Fixes broken layout of dropbox link.

--- a/static/styles/zulip.scss
+++ b/static/styles/zulip.scss
@@ -2220,7 +2220,7 @@ div.floating_recipient {
     height: auto;
     max-height: 100%;
     float: left;
-    margin-right: 10px;
+    margin-right: 5px;
 }
 
 .message_inline_image img {
@@ -2245,6 +2245,8 @@ li .message_inline_image img {
 
 .message_inline_image_title {
     font-weight: bold;
+    position: relative;
+    top: 15px;
 }
 
 .katex-html {
